💄 Fix having multiple tags selected overlaps the karaoke list

--- a/kmexplorer/assets/main.scss
+++ b/kmexplorer/assets/main.scss
@@ -112,7 +112,7 @@ body.has-navbar-fixed-top, html.has-navbar-fixed-top {
 }
 
 .columns {
-	margin-top: calc(var(--maxh, 0px) - 4rem)
+	margin-top: var(--maxh, - 0.75rem)
 }
 
 @media (min-width: $desktop) {
